--- a/clement-pinot.html
+++ b/clement-pinot.html
@@ -147,7 +147,7 @@
         <section id="about">
             <br>
             <h2>À propos de moi</h2>
-            <p>Je m'appelle Clément Pinot, j'ai 17 ans et je suis passionné par l'informatique. Je suis le fondateur du serveur Minecraft "Aragonite", modérateur de nombreux serveurs Discord, programmeur amateur, Youtubeur short et bien plus encore.</p>
+            <p>Je m'appelle Clément Pinot, j'ai 17 ans et je suis passionné par l'informatique. Je suis le fondateur du serveur Minecraft Aragonite, modérateur de nombreux serveurs Discord, programmeur amateur, Youtubeur short et bien plus encore.</p>
             <p>Mon objectif est de créer des expériences passionnantes, instructives et engageantes.</p>
         </section>
 
