--- a/clement-pinot.html
+++ b/clement-pinot.html
@@ -158,6 +158,7 @@
                 <div class="project">
                     <h3>Aragonite</h3>
                     <p>Aragonite est un serveur Minecraft PVP faction ouvert à tous. Nous nous efforçons de repousser les limites du possible toujours plus loin sans toutefois dénaturer le jeu.</p>
+                    <a href="https://discord.gg/GrDNCzqugb" target="_blank" class="btn">Le discord officiel</a> 
                 </div>
                 <div class="project">
                     <h3>Gears of Time</h3>
