--- a/clement-pinot.html
+++ b/clement-pinot.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Site personnel de Clément Pinot présentant mes projets en développement web.">
+    <meta name="description" content="Site personnel de Clément Pinot présentant ses projets.">
     <meta name="keywords" content="HTML, CSS, JavaScript, développement web, projets personnels">
-    <title>Mon Site Personnel</title>
+    <title>Profil - Clément Pinot</title>
 
     <!-- Intégration de Font Awesome pour les icônes -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
