--- a/clement-pinot.html
+++ b/clement-pinot.html
@@ -180,6 +180,7 @@
                     <h3>Youtube</h3>
                     <p>J'ai une chaîne Youtube spécialisé dans le jeu vidéo Brawl Stars, que des shorts pour le moment.</p>
                     <a href="https://www.youtube.com/@Cl3m_bs" target="_blank" class="btn">Clem BS</a>
+                </div>
             </div>
         </section>
     </div>
