--- a/clement-pinot.html
+++ b/clement-pinot.html
@@ -176,7 +176,7 @@
                     <a href="https://discord.gg/Khk8dQke94" target="_blank" class="btn">Chronical Time</a> 
                     <a href="https://discord.gg/Xja9n4qUHK" target="_blank" class="btn">Azertim's place</a> 
                 </div>
-                <div class="projet">
+                <div class="project">
                     <h3>Youtube</h3>
                     <p>J'ai une chaîne Youtube spécialisé dans le jeu vidéo Brawl Stars, que des shorts pour le moment.</p>
                     <a href="https://www.youtube.com/@Cl3m_bs" target="_blank" class="btn">Clem BS</a>
