--- a/clement-pinot.html
+++ b/clement-pinot.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site personnel de Clément Pinot présentant ses projets.">
     <meta name="keywords" content="HTML, CSS, JavaScript, développement web, projets personnels">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/gothic-_5_.ico">
     <title>Profil - Clément Pinot</title>
 
     <!-- Intégration de Font Awesome pour les icônes -->
