--- a/clement-pinot.html
+++ b/clement-pinot.html
@@ -181,6 +181,13 @@
                 </div>
             </div>
         </section>
+
+ <section id="remerciements">
+            
+            <h2>Remerciements</h2>
+            <p>Je souhaite particulierement remercier mes plus proches amis tel que Sophian, Romane ou encore Elina mais aussi ma famille, surtout mon frère, qui m'on toujours suporté et donné la force d'accomplir tout cela.</p>
+            
+        </section>
     </div>
 
     <!-- Pied de page -->
