--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: 'Courier New', monospace;
-      background: url('background.gif') center/cover no-repeat;
+      background: url('background.png') center/cover no-repeat;
       color: white;
       display: flex;
       justify-content: center;
