--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
       margin: 0;
       font-family: 'Courier New', monospace;
       background: url('background.png') center/cover no-repeat;
+      background-color: black;
       color: white;
       display: flex;
       justify-content: center;
