--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,34 +8,50 @@
     body {
       margin: 0;
       font-family: 'Courier New', monospace;
-      background: url('background.png') center/cover no-repeat;
-      background-color: black;
+      background: url('https://i.imgur.com/lEtpMYb.gif') center/cover no-repeat;
       color: white;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       overflow: hidden;
+      transition: background 0.3s ease;
     }
+
     .card {
       background: rgba(0, 0, 0, 0.75);
       padding: 30px;
       border-radius: 10px;
       text-align: center;
       box-shadow: 0 0 20px #0f0;
+      -webkit-backdrop-filter: blur(5px);
       backdrop-filter: blur(5px);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
+
+    .card:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 30px #0f0;
+    }
+
     .pfp {
       border: 3px solid #0f0;
       border-radius: 50%;
       width: 100px;
       height: 100px;
+      transition: transform 0.3s ease;
     }
+
+    .pfp:hover {
+      transform: rotate(15deg);
+    }
+
     .tagline {
       margin-top: 10px;
       font-style: italic;
       color: #aaa;
     }
+
     .btn {
       margin-top: 20px;
       padding: 10px 20px;
@@ -44,44 +60,66 @@
       border: 1px solid #0f0;
       cursor: pointer;
       font-family: inherit;
+      transition: background-color 0.3s ease, color 0.3s ease;
     }
+
+    .btn:hover {
+      background-color: #0f0;
+      color: black;
+    }
+
     #final-message {
       display: none;
       margin-top: 20px;
       font-size: 24px;
       color: red;
+      opacity: 0;
+      transition: opacity 0.5s ease;
     }
+
+    #final-message.show {
+      opacity: 1;
+    }
+
+    /* Mobile responsiveness */
+    @media (max-width: 768px) {
+      body {
+        font-size: 14px;
+      }
+
+      .card {
+        padding: 20px;
+      }
+
+      .pfp {
+        width: 80px;
+        height: 80px;
+      }
+
+      .btn {
+        padding: 8px 16px;
+      }
+    }
+
   </style>
 </head>
 <body>
 
 <div class="card">
-  <img class="pfp" src="pfp.png" alt="Image de profil">
+  <img class="pfp" src="https://i.imgur.com/YOURPFP.png" alt="Image de profil d'OverClem">
   <h2>OverClem</h2>
   <p class="tagline">Now, I'm becoming death</p>
   <p><code>root@OverClem:/abyss</code></p>
 
-  <button class="btn" onclick="reveal()">Accéder à la vérité</button>
+  <button class="btn" onclick="document.getElementById('final-message').classList.add('show')">Access the truth</button>
 
-  <div id="final-message">Fin de transmission.</div>
+  <div id="final-message">Fin de transmition.</div>
 </div>
 
-<!-- Audio local contrôlé par JS -->
-<audio id="audio" src="audio.mp3" preload="auto"></audio>
-
-<script>
-  function reveal() {
-    // Affiche le message final
-    document.getElementById('final-message').style.display = 'block';
-
-    // Lance le son après interaction utilisateur
-    const audio = document.getElementById('audio');
-    audio.volume = 0.5; // Réglez le volume si besoin
-    audio.play().catch(err => {
-      console.warn("Lecture audio bloquée :", err);
-    });
-  }
-</script>
+<!-- Audio (optionnel) -->
+<audio autoplay loop>
+  <source src="your-audio.mp3" type="audio/mpeg">
+</audio>
 
 </body>
 </html>
