--- a/home.html
+++ b/home.html
@@ -67,9 +67,10 @@
   <div id="final-message">Fin de transmition.</div>
 </div>
 
-<!-- Audio local -->
+<!-- Audio local avec autoplay activé -->
 <audio autoplay loop>
   <source src="audio.mp3" type="audio/mpeg"> <!-- Fichier audio local MP3 -->
+  Votre navigateur ne prend pas en charge l'élément audio.
 </audio>
 
 </body>
