--- a/home.html
+++ b/home.html
@@ -102,8 +102,8 @@
     }
 
     .side-image {
-      width: 300px;
-      height: auto;
+      width: 700px;
+      height: 700px;
       border-radius: 15px;
       box-shadow: 0 0 15px #0f0;
     }
