--- a/home.html
+++ b/home.html
@@ -103,7 +103,7 @@
 
     .side-image {
       width: 700px;
-      height: 700px;
+      height: auto;
       border-radius: 15px;
       box-shadow: 0 0 15px #0f0;
     }
