--- a/home.html
+++ b/home.html
@@ -130,9 +130,6 @@
       text-align: center;
     }
 
-    audio {
-      width: 80%;
-    }
   </style>
 </head>
 <body>
@@ -156,10 +153,7 @@
 </div>
 
 <footer>
-  <audio id="bgAudio" controls>
-    <source src="audio.mp3" type="audio/mpeg" />
-    Ton navigateur ne supporte pas la lecture audio.
-  </audio>
+  <!-- La balise <audio> a été complètement supprimée -->
 </footer>
 
 <script>
@@ -207,7 +201,7 @@ function enterSite() {
   document.getElementById("mainCard").style.display = "block";
   document.getElementById("contentWrapper").style.display = "flex";
 
-  const audio = document.getElementById("bgAudio");
+  const audio = new Audio('audio.mp3'); // Création d'un objet Audio sans l'affichage
   const lyricsBox = document.getElementById("lyricsBox");
 
   lyricsBox.innerHTML = lyrics.map((line, i) => `<div class="lyric-line" id="line-${i}">${line.text}</div>`).join('');
